--- a/app/src/containers/IntroducingContainerPage/HomePageIntroduce/style.css
+++ b/app/src/containers/IntroducingContainerPage/HomePageIntroduce/style.css
@@ -1,7 +1,7 @@
 
 .content_1{
     height: 910px;
-    width: 1910px;
+    width: 100%;
 }
 .wrap-header{
     position: relative;
@@ -50,7 +50,7 @@
     justify-content: center;
     align-items: center;
     background-color: #030305;
-    width: 1919px;
+    width: 100%;
     height: 910px;
 }
 .img{
