--- a/app/src/components/Slider/slider.css
+++ b/app/src/components/Slider/slider.css
@@ -1,37 +1,6 @@
-.wrap-menu{
-    display: grid;
-    grid-template-columns: repeat(18,1fr);
-    height: 90px;
-    width: 100%;
-    border: 1px solid #ccc;
+.content{
+    font-family: "Rubik", sans-serif;
 }
-.route-page{
-    display: flex;
-    align-items: center;
-    grid-column-start: 2;
-    grid-column-end: 15;
-    width: 100%;
-    grid-gap: 10px;
-}
-
-.iconMenu{
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-}
-.btn-route{
-    text-align: center;
-}
-.filter{
-    display: flex;
-    align-items: center;
-    grid-column-start: 15;
-    grid-column-end: 18;
-    width: 100%;
-}
-
-/*---------------------------*/
 .slider-container {
     width: 100%;
     display: flex;
@@ -43,6 +12,7 @@
     position: relative;
     width: 300px; /* Thay đổi kích thước slider theo nhu cầu */
     overflow: hidden;
+    height: 300px;
   }
   
   .slider-button {
