--- a/app/src/containers/Menu/MenuIntro/style.css
+++ b/app/src/containers/Menu/MenuIntro/style.css
@@ -43,8 +43,8 @@
 .item-search-header{
     width: 25%;
     height: 100%;
-    display: flex;
-    align-items: center;
+  
+    position: relative;
 }
 
 .item-address{
@@ -94,8 +94,6 @@
 .item-register{
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
     padding-left: 20px;
     position: relative;
 }
@@ -107,9 +105,24 @@
     border-radius: 40px;
 }
 
+.btn-register{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .option-register{
-    
+    margin-top:12px ;
+    padding: 20px;
+    border-radius: 20px;
+    display: block;
     position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    width: 360px;
+    height: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
